fix readable colors

--- a/src/index.css
+++ b/src/index.css
@@ -47,26 +47,31 @@ code {
 
 
 .ms-TextField-errorMessage {
-  color: white !important;
+  color: #f1f1f1 !important;
 }
 
 .ms-DetailsHeader {
   padding-top: 0 !important;
-  background: rgba(255, 255, 255, 0.1) !important;
+  background: #f5f5f5 !important;
 }
 
 .ms-DetailsHeader > div {
-  color: white !important;
+  color: #111111 !important;
 }
 
 .ms-DetailsHeader > div:hover {
-  color: white !important;
+  color: #111111 !important;
   background: unset !important;
 }
 
+.ms-Viewport {
+  border-radius: 10px!important;
+  overflow: hidden;
+}
+
 .ms-DetailsRow {
-  background: rgba(255, 255, 255, 0.1) !important;
-  color: white !important;
+  background: #f5f5f5 !important;
+  color: #111111 !important;
   font-weight: bold;
 }
 
@@ -86,10 +91,13 @@ code {
   display: flex;
   justify-content: center;
   flex-direction: column;
+  gap: 4px;
   padding: 15px 0;
   border-radius: 10px;
-  background: rgba(255, 255, 255, 0.1);
+  background: #f5f5f5;
+  color: #111111;
   box-sizing: border-box;
+  margin-bottom: 8px;
 }
 .date_picker > * {
   margin: 0 auto;
